# Artec3D

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/generator/: generator.cpp  generator.h
src/solver/: solver.cpp  solver.h
src/unit_test/: unit_test.h
